--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -287,7 +287,7 @@
   color: #C75F00;
   font-size: 32px;
   text-align: left;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .tituloFooter{
@@ -510,6 +510,7 @@
   text-align: left;
   padding: 5px;
   margin: 20px;
+  text-align: left;
 }
 
 
