--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -663,7 +663,7 @@
 
 .tituloPaginas {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 80px;
 }
 
 .posicionPreguntasFrecuentes {
@@ -733,3 +733,59 @@
 
 
 
+/* Custom styles for Carrousel component */
+
+.swiper-container {
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  background: #eee;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff;
+  background: #000;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  transform: scale(1.1);
+}
+
+.subtituloCertificaciones{
+  text-align: center;
+  font-family: "montserrat", sans-serif;
+  margin-top: 10px;
+  font-size: 22px;
+}
+
+.posicionContenedorCertificaciones{
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+.contenedorCertificaciones{
+  background-color: white;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.textoServicios{
+  font-family: "montserrat", sans-serif;
+  font-size: 18px;
+}
+
+.contenedorContenidoServicio{
+  margin-top: 100px;
+  padding: 60px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
