--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -789,3 +789,159 @@
   padding-top: 0px;
   padding-bottom: 0px;
 }
+
+/* Footer Container */
+.footer {
+  background-color: #121212;
+  color: white;
+  padding: 40px 0;
+}
+
+/* Footer Container Styles */
+.footerContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* Footer Column Styles */
+.footerColumn {
+  flex: 1;
+  margin-right: 20px;
+}
+
+/* Footer Heading Styles */
+.footerHeading {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  color: #C75F00; /* Color naranja */
+}
+
+/* Footer Text Styles */
+.footerText {
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+/* Footer Links Styles */
+.footerList {
+  list-style: none;
+  padding: 0;
+}
+
+.footerListItem {
+  margin-bottom: 10px;
+}
+
+.footerListItem a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footerListItem a:hover {
+  color: #ffa24a; /* Cambiar a color naranja al pasar el ratón */
+}
+
+/* Footer Bottom Styles */
+.footerBottom {
+  text-align: center;
+  padding-top: 20px;
+}
+
+/* Responsive Footer Styles */
+@media (max-width: 768px) {
+  .footerColumn {
+    flex: 1 1 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
+
+/* Footer.module.css */
+
+.footer {
+  background-color: #121212;
+  color: #ffffff;
+  padding: 30px 0;
+  margin-top: 80px;
+}
+
+.footerContainer {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Espaciado uniforme entre las columnas */
+}
+
+.footerColumn {
+  width: calc(33.33% - 20px); /* Calculamos el ancho de cada columna */
+  padding: 0 10px;
+}
+
+.footerHeading {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.footerText {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.footerList {
+  list-style: none;
+  padding: 0;
+}
+
+.footerListItem {
+  margin-bottom: 10px;
+}
+
+.footerListItem a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1rem;
+}
+
+.footerBottom {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+/* Media query para hacerlo responsive en pantallas más pequeñas */
+@media (max-width: 768px) {
+  .footerColumn {
+    width: 100%; /* Ocupa todo el ancho en pantallas pequeñas */
+    margin-bottom: 20px; /* Agregamos espacio entre las columnas */
+  }
+}
+
+.footerHeading{
+  font-family: "montserrat", sans-serif;
+}
+
+.footerText{
+  font-family: "montserrat", sans-serif;
+}
+
+.footerListItem{
+  font-family: "montserrat", sans-serif;
+}
+
+.footerHeadingMain{
+  font-family: "montserrat", sans-serif;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.footerBottom p{
+  font-size: 16px;
+  font-family: "montserrat", sans-serif;
+  font-style:italic
+}
